--- a/Loboteca/Loboteca/Views/Negocios/Negocios.cshtml
+++ b/Loboteca/Loboteca/Views/Negocios/Negocios.cshtml
@@ -51,24 +51,25 @@
                 </div>
         </section>
 
+       <!-- Sección de Revistas -->
         <section class="magazines-section" id="revistas">
             <div class="section-title">
                 <h2>Revistas</h2>
-            </div>
-            <div class="carousel-container">
-                <button class="prev" onclick="moveCarouselMagazines(-1)">&#10094;</button>
-                <div class="carousel">
-                    @foreach (var revista in ViewBag.RevistasRecientes)
-                    {
-                        <div class="magazine">
-                            <img src="@revista.RutaImagen" alt="@revista.Titulo">
-                            <!-- Botón Leer Revista añadido -->
-                            <button class="read-button" onclick="window.open('@revista.Archivo', '_blank')">Leer Revista</button>
-                            <p class="available">@revista.Estado</p>
-                        </div>
-                    }
+                <div class="carousel-container">
+                    <button class="prev" onclick="moveCarouselMagazines(-1)">&#10094;</button>
+                    <div class="carousel">
+                        @foreach (var revista in ViewBag.RevistasRecientes)
+                        {
+                                <div class="magazine">
+                                    <a href="@revista.Archivo" target="_blank">
+                                        <img src="@revista.RutaDeImagen" alt="@revista.Titulo">
+                                    </a>
+                                    <p class="available">@revista.Estado</p>
+                                </div>
+                        }
+                    </div>
+                    <button class="next" onclick="moveCarouselMagazines(1)">&#10095;</button>
                 </div>
-                <button class="next" onclick="moveCarouselMagazines(1)">&#10095;</button>
             </div>
         </section>
     </main>
