--- a/Loboteca/Loboteca/Views/Tecnologias/Tecnologias.cshtml
+++ b/Loboteca/Loboteca/Views/Tecnologias/Tecnologias.cshtml
@@ -21,7 +21,8 @@
             <ul>
                 <li><img src="~/images/libros_ama.png" alt="TroncoComun" class="TroncoComun"><a href="@Url.Action("TroncoComun", "TroncoComun")">Libros de Tronco Común</a></li>
                 <li><img src="~/images/revistaE.png" alt="Revistas" class="Revistas"><a href="#revistas">Revistas</a></li>
-                <li><img src="~/images/sancionesE.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
+                <li><img src="~/images/benergia.png" alt="Wiki" class="Wiki"><a href="@Url.Action("Search", "Wiki")">WikiSearch</a></li>
+                <li><img src="~/images/senergia.png" alt="Suggestion" class="Suggestion"><a href="@Url.Action("Index", "Suggestion")">Sugerencias</a></li>
                 <li><img src="~/images/login_ama.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
             </ul>
         </nav>
