--- a/Loboteca/Loboteca/Views/ELibro/Details.cshtml
+++ b/Loboteca/Loboteca/Views/ELibro/Details.cshtml
@@ -79,8 +79,8 @@
             </dl>
 
             <div class="botones">
-                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-success">Editar</a>
-                <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
+                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
+                <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
             </div>
         </div>
     </main>
