--- a/Loboteca/Loboteca/Views/Industri/Industri.cshtml
+++ b/Loboteca/Loboteca/Views/Industri/Industri.cshtml
@@ -21,7 +21,8 @@
             <ul>
                 <li><img src="~/images/libros_a.png" alt="TroncoComun" class="TroncoComun"><a href="@Url.Action("TroncoComun", "TroncoComun")">Libros de Tronco Común</a></li>
                 <li><img src="~/images/revistaIn.png" alt="Revistas" class="revistas"><a href="#revistas">Revistas</a></li>
-                <li><img src="~/images/sancionIn.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
+                <li><img src="~/images/bindustri.png" alt="Wiki" class="Wiki"><a href="@Url.Action("Search", "Wiki")">WikiSearch</a></li>
+                <li><img src="~/images/sindustri.png" alt="Suggestion" class="Suggestion"><a href="@Url.Action("Index", "Suggestion")">Sugerencias</a></li>
                 <li><img src="~/images/login_a.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
                 <li><button id="logoutButton" class="logout-button">Cerrar Sesión</button></li> <!-- Botón de cerrar sesión -->
             </ul>
