--- a/Loboteca/Loboteca/Views/Mecatronica/Mecatronica.cshtml
+++ b/Loboteca/Loboteca/Views/Mecatronica/Mecatronica.cshtml
@@ -21,7 +21,8 @@
             <ul>
                 <li><img src="~/images/libros_gri.png" alt="TroncoComun" class="TroncoComun"><a href="@Url.Action("TroncoComun", "TroncoComun")">Libros de Tronco Común</a></li>
                 <li><img src="~/images/revistasMECA.png" alt="Revistas" class="revistas"><a href="#revistas">Revistas</a></li>
-                <li><img src="~/images/castigoMeca.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
+                <li><img src="~/images/bmecatronica.png" alt="Wiki" class="Wiki"><a href="@Url.Action("Search", "Wiki")">WikiSearch</a></li>
+                <li><img src="~/images/smecatronica.png" alt="Suggestion" class="Suggestion"><a href="@Url.Action("Index", "Suggestion")">Sugerencias</a></li>
                 <li><img src="~/images/login_gri.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
                 <li><button class="logout-button" id="logoutButton">Cerrar Sesión</button></li> <!-- Botón de cerrar sesión -->
             </ul>
