--- a/Loboteca/Loboteca/Views/Negocios/Negocios.cshtml
+++ b/Loboteca/Loboteca/Views/Negocios/Negocios.cshtml
@@ -21,7 +21,8 @@
             <ul>
                 <li><img src="~/images/libros_mor.png" alt="TroncoComun" class="TroncoComun"><a href="@Url.Action("TroncoComun", "TroncoComun")">Libros de Tronco Común</a></li>
                 <li><img src="~/images/revista_ne.png" alt="Revistas" class="Revistas"><a href="#revistas">Revistas</a></li>
-                <li><img src="~/images/sancionesN.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
+                <li><img src="~/images/bnegocios.png" alt="Wiki" class="Wiki"><a href="@Url.Action("Search", "Wiki")">WikiSearch</a></li>
+                <li><img src="~/images/snegocios.png" alt="Suggestion" class="Suggestion"><a href="@Url.Action("Index", "Suggestion")">Sugerencias</a></li>
                 <li><img src="~/images/login_mor.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
                 <li><button class="logout-button" id="logoutButton">Cerrar Sesión</button></li> <!-- Botón de cerrar sesión -->
 
