--- a/Loboteca/Loboteca/wwwroot/css/ELibro/ELibroDetails.css
+++ b/Loboteca/Loboteca/wwwroot/css/ELibro/ELibroDetails.css
@@ -84,8 +84,17 @@ body {
     margin-bottom: 20px;
 }
 
-/* Contenido de la eliminación */
-.formulario-container {
+.row {
+    display: flex;
+    justify-content: center;
+}
+
+dt, dd {
+    font-size: 18px;
+}
+
+/* Formulario de detalles */
+.formulario-altas {
     width: 50%;
     margin: 40px auto;
     padding: 30px;
@@ -99,44 +108,31 @@ dl.row {
     margin-bottom: 15px;
 }
 
-dt {
+dt.col-sm-4 {
     font-weight: bold;
     color: #781c2e;
-    margin-bottom: 5px;
 }
 
-dd {
-    margin-bottom: 15px;
+dd.col-sm-8 {
+    margin-bottom: 10px;
 }
 
-/* Botones */
-.btn-danger {
-    background-color: #dc3545;
+.botones {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-success, .btn-secondary {
+    background-color: #781c2e;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 
-    .btn-danger:hover {
-        background-color: #c82333;
-    }
-
-.btn-secondary {
-    background-color: transparent;
-    color: #781c2e;
-    border: 2px solid #781c2e;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-    .btn-secondary:hover {
-        background-color: #781c2e;
-        color: white;
+    .btn-success:hover, .btn-secondary:hover {
+        background-color: #993333;
     }
 
 /* Pie de página */
